[package]
name = "rabbitmq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
hex-literal = "0.4.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
sha256 = "1.6.0"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.0", features = ["v4"] }
